--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
     <title>Black Rose</title>   
 </head>
 <body>
+   <nav id="menu"> 
+    <a class="hyperlink" href="page1.html">The best team</a>
+    <a class="hyperlink" href="page2.html">Class</a>
+    <a class="hyperlink" href="page3.html">DDE</a>
+    <a class="hyperlink" href="page4.html">Qiol</a>
+
+   </nav> 
     
 </body>
-</html>
